CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_DEFINITIONS(${GLIBMM_CFLAGS})
LINK_DIRECTORIES(${GLIBMM_LIBRARY_DIRS})

SET(SOVERSION ${MYSAT_VERSION})

ADD_LIBRARY(satutils SHARED satio.cc module.cc)

TARGET_LINK_LIBRARIES(satutils ${GLIBMM_LIBRARIES})

SET_TARGET_PROPERTIES(satutils PROPERTIES VERSION ${MYSAT_VERSION}
      SOVERSION ${MYSAT_MAJOR_VERSION})

ADD_SUBDIRECTORY(tests)

INSTALL(TARGETS satutils
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib)
INSTALL(FILES satutils.h DESTINATION include/satutils)
